--- a/index.html
+++ b/index.html
@@ -1,104 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Web Development</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
 
-  <body>
-    <header>
-      <div class="container">
-        <div class="box">
-          <div class="logo">
+<head>
+  <meta charset="utf-8" />
+  <title>Web Development</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class="box">
+        <div class="logo">
+          <a href="#">
+            <h3>TK</h3>
+          </a>
+        </div>
+        <nav class="menu">
+          <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main class="container-body">
+    <div class="container">
+      <div class="content">
+        <div class="content-left">
+          <div class="details">
+            <span class="hello">Hello My Name Is</span>
+            <span class="name">Tilak Kc</span>
+            <h2>Professional Web Designer</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
+              quaerat adipisci distinctio eaque esse dicta voluptate facere, a
+              labore eveniet voluptates tempora ex laboriosam nesciunt
+              corrupti facilis. Eius, cum ipsam?
+            </p>
+          </div>
+          <div class="personal-button">
+            <ul>
+              <li><a href="">Resume</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="content-right">
+          <div class="image">
             <a href="#">
-              <h3>TK</h3>
+              <img src="avatar.png" />
             </a>
           </div>
-          <nav class="menu">
-            <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Skills</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
         </div>
       </div>
-    </header>
-    <main>
-      <div class="container">
-        <div class="content">
-          <div class="content-left">
-            <div class="details">
-              <span class="hello">Hello My Name Is</span>
-              <span class="name">Tilak Kc</span>
-              <h2>Professional Web Designer</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
-                quaerat adipisci distinctio eaque esse dicta voluptate facere, a
-                labore eveniet voluptates tempora ex laboriosam nesciunt
-                corrupti facilis. Eius, cum ipsam?
-              </p>
-            </div>
-            <div class="personal-button">
-              <ul>
-                <li><a href="">Resume</a></li>
-                <li><a href="">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="content-right">
-            <div class="image">
-              <a href="#">
-                <img src="avatar.png" />
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="contact-box">
-          <h2>Get in touch with me</h2>
-          <form>
-            <label for="fullName">Full Name</label>
-            <input
-              id="fullName"
-              type="text"
-              name="fullName"
-              placeholder="Enter Your Name"
-            />
-            <label for="contact">Contact</label>
-            <input
-              id="contact"
-              type="text"
-              name="number"
-              placeholder="Enter Your Number"
-            />
-            <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Enter Your Email"
-            />
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-              rows="10"
-              placeholder="Your Message..."
-            ></textarea>
-            <button type="submit">Submit</button>
-            <button type="reset">Reset</button>
-          </form>
-        </div>
+      <div class="contact-box">
+        <h2 style="color: #FFF;">Get in touch with me</h2>
+        <form>
+          <label for="fullName">Full Name</label>
+          <input id="fullName" type="text" name="fullName" placeholder="Enter Your Name" />
+          <label for="contact">Contact</label>
+          <input id="contact" type="text" name="number" placeholder="Enter Your Number" />
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Enter Your Email" />
+          <label for="message">Message</label>
+          <textarea name="message" id="message" rows="10" cols="94" placeholder="Your Message..."></textarea>
+          <button type="submit">Submit</button>
+          <button type="reset">Reset</button>
+        </form>
       </div>
-    </main>
-    <footer>
-      <div class="container">
-        <div class="copyright">
-          <p>Tilak KC &copy; 2019. All Rights Reserved</p>
-        </div>
-      </div>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+    </div>
+  </main>
+  <footer>
+    <div class="copyright">
+      <p>Tilak KC &copy; 2019. All Rights Reserved</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
+</body>
+
 </html>
