--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Web Development</title>
+  <title>Tilak Kc</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
