--- a/index.html
+++ b/index.html
@@ -56,17 +56,18 @@
           </div>
         </div>
       </div>
+      <div class="clearfix"></div>
       <div class="contact-box">
-        <h2 style="color: #FFF;">Get in touch with me</h2>
+        <h1>Get in touch with me</h1>
         <form>
-          <label for="fullName">Full Name</label>
+          <label for="fullName">Full Name: </label>
           <input id="fullName" type="text" name="fullName" placeholder="Enter Your Name" />
-          <label for="contact">Contact</label>
+          <label for="contact">Contact: </label>
           <input id="contact" type="text" name="number" placeholder="Enter Your Number" />
-          <label for="email">Email</label>
+          <label for="email">Email: </label>
           <input type="email" id="email" name="email" placeholder="Enter Your Email" />
-          <label for="message">Message</label>
-          <textarea name="message" id="message" rows="10" cols="94" placeholder="Your Message..."></textarea>
+          <label for="message">Message: </label>
+          <textarea name="message" id="message" placeholder="Your Message..."></textarea>
           <button type="submit">Submit</button>
           <button type="reset">Reset</button>
         </form>
