Add * to the required form field label

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <h1>Get in touch with me</h1>
         <div id="alert"></div>
         <form>
-          <label for="fullName">Full Name: </label>
+          <label for="fullName">Full Name*: </label>
           <input id="fullName" type="text" name="fullName" placeholder="Enter Your Name" />
-          <label for="contact">Contact: </label>
+          <label for="contact">Contact*: </label>
           <input id="contact" type="text" name="number" placeholder="Enter Your Number" />
-          <label for="email">Email: </label>
+          <label for="email">Email*: </label>
           <input type="email" id="email" name="email" placeholder="Enter Your Email" />
           <label for="message">Message: </label>
           <textarea name="message" id="message" placeholder="Your Message..."></textarea>
